# simloom

./: .gitignore  CHANGELOG.md  DIRECTIVES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: determinism.md  event-log.md  launch-post.md  plan.md
examples/: README.md  bpo42130.py  toy_raft.py
spikes/: FINDINGS.md  s1_seeded_scheduler.py  s2_virtual_clock.py  s3_httpx_aiohttp_insim.py  s4_tape_replay.py  s5_explore_and_shrink.py
src/simloom/: __init__.py  _boundary.py  _buggify.py  _cli.py  _consistency.py  _context.py  _errors.py  _eventlog.py  _explore.py  _fingerprint.py  _hashseed.py  _loop.py  _monitors.py  _net.py  _patches.py  _pytest_plugin.py  _run.py  _sched.py  _services.py  _shrink.py  _soak.py  _systematic.py  _tape.py  _testing.py  _version.py  _world.py
tests/: bug_zoo.py  conftest.py  oracle_zoo.py  test_boundary.py  test_causal.py  test_cli.py  test_connected_pair.py  test_consistency.py  test_datagram.py  test_determinism.py  test_escape.py  test_eventlog.py  test_explore_shrink.py  test_fingerprint.py  test_loop.py  test_monitors.py  test_oss_repro.py  test_package.py  test_patches.py  test_pct_auto.py  test_pytest_plugin.py  test_raft_demo.py  test_redis.py  test_selfcheck.py  test_shaping.py  test_soak.py  test_systematic.py  test_tape.py  test_tls.py  test_world.py  test_world_default.py  test_world_http.py  test_zoo.py  toy_raft.py
